@@ -1,7 +1,9 @@
 [b]Version 0.6.0rc1 (not released yet)[/b]:
 
 (2008-01-10)
- * Added an icon in the Instances tab so it doesn't look so empty.
+ * Added an icon in the Instances tab so it doesn't look so empty 
+   (instance1.png and instance2.png).
+ * Moved the seeking options in the Interface section to another tab.
 
 (2008-01-09)
  * Added the possibility to update the position of video while
